<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>rclcpp_action</name>
  <version>2.1.0</version>
  <description>Adds action APIs for C++.</description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <build_export_depend>rosidl_runtime_c</build_export_depend>

  <build_depend>rosidl_runtime_c</build_depend>

  <depend>action_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rcl_action</depend>

  <depend>ament_cmake</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>test_msgs</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
