<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>rclcpp_components</name>
  <version>2.1.0</version>
  <description>Package containing tools for dynamically loadable components</description>
  <maintainer email="michael@openrobotics.org">Michael Carroll</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <build_depend>ament_index_cpp</build_depend>
  <build_depend>class_loader</build_depend>
  <build_depend>composition_interfaces</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rcpputils</build_depend>

  <exec_depend>ament_index_cpp</exec_depend>
  <exec_depend>class_loader</exec_depend>
  <exec_depend>composition_interfaces</exec_depend>
  <exec_depend>rclcpp</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>std_msgs</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

